--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,9 +1,14 @@
-<% @countries.recipes.each do |country| %>
-<h1><%= country.name %></h1>
-<%= image_tag country.recipe_image %>
-<h2><%= country.method %></h2>
+<% @country.recipes.each do |recipe| %>
+<h1><%= recipe.name %></h1>
+<%= image_tag recipe.recipe_image %>
+<h2><%= recipe.method %></h2>
+<h3><%= recipe.id %> </h3>
 
+<%= link_to 'Destroy', recipe, method: :delete, data: { confirm: 'Are you sure?' } %>
+
+<%= link_to 'Edit', edit_recipe_path(recipe) %>
 <%end%>
+
 
 <%= link_to 'new recipe', new_recipe_path %>
 
