--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -16,8 +16,12 @@
     <%= f.text_field :name %>
   </div>
    <div class="field">
+    <%= f.label :amounts %><br>
+    <%= f.text_field :amounts %>
+  </div>
+   <div class="field">
     <%= f.label :method %><br>
-    <%= f.text_field :method, cols:"30", rows:"30" %>
+    <%= f.text_field :method %>
   </div>
   <div class="field">
     <%= f.label :recipe_image%><br>
