--- a/app/assets/stylesheets/countries.scss
+++ b/app/assets/stylesheets/countries.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the countries controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+#country-icon{
+	width: 200px;
+	height: 200px;
+}
+
+#country-name{
+
+}
