--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,8 +1,8 @@
 <% @countries.each do |country| %>
 
-<h1><%= link_to country.name, recipe_path(country.id)%><%= image_tag country.country_image %></h1>
-<%= link_to 'Destroy', country, method: :delete, data: { confirm: 'Are you sure?' } %>
+<h1 id='country-name'><%= link_to image_tag(country.country_image) + country.name, recipe_path(country.id), class: 'button', id: 'country-icon' %></h1>
+<%= link_to 'Destroy', country, method: :delete, data: { confirm: 'Are you sure?' }, class: 'button' %>
 
 <%end%>
 
-<footer><%= link_to 'new country', new_country_path %></footer>
+<footer><%= link_to 'new country', new_country_path, class: 'button' %></footer>
