--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,17 @@
   </head>
 
   <body>
+    <nav class="top-bar" data-topbar role="navigation">
+  <ul class="title-area">
+    <li class="name">
+      <h1><%= link_to 'Tonight I Want....', root_path %></h1>
+    </li>
+  </ul>
+
+  <section class="top-bar-section">
+  </section>
+</nav>
+
 
     <%= yield %>
 
