--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%=@country.name%></h1>
+<div class='country-box'><h1><%=@country.name%></h1>
 
 <% @recipes.each do |recipe| %>
 
@@ -6,6 +6,6 @@
 
 <%end%>
 
-
+</div>
 
 
