--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,5 @@
-<%= link_to 'countries', countries_path, class: "button" %>
+<%= image_tag "Logo.png"%>
+
+<%= link_to 'Countries', countries_path, class: "button" %>
+<%= link_to 'Search', 'https://www.youtube.com/watch?v=dQw4w9WgXcQ', class: "button" %>
+
